--- a/result.html
+++ b/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You've Been Pranked!</title>
+    <title>Malicious Website</title>
     <style>
         body {
             display: flex;
